tests/sumo/errors/invalid_color/errors.sumo
Error: Attribute 'color' in definition of vType 'color_test' is empty.
Quitting (on error).
